# ansible-role-telegraf

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
defaults/: main.yaml
files/etc/telegraf.conf.d/: 10-defaults.conf
handlers/: main.yaml
meta/: main.yaml
molecule/: requirements.yaml
molecule/ci/: Dockerfile.j2  converge.yml  molecule.yml
molecule/default/: Dockerfile.j2  converge.yml  molecule.yml
tasks/: main-alpine.yaml  main-debian.yaml  main.yaml
templates/etc/: telegraf.conf.j2
